tests/NormalTests/paczka2/big_fuzzy/33003168.err
Error in line 2: iWhbr A302 61,8
Error in line 5: iWhbr A146 81,3
Error in line 17: A566 A206 25,8
Error in line 20: eRTSb A206 126,8
Error in line 26: cq7lNVK A146 96,4
Error in line 23: eRTSb A566 79,5
Error in line 30: eRTSb A302 98,3
Error in line 36: 0hFe A206 40,3
Error in line 39: 0hFe A146 97,0
Error in line 47: 0hFe A206 45,9
Error in line 58: A566 A302 16,2
Error in line 55: eRTSb A302 136,0
Error in line 63: 29f22R2lCT A206 32,3
Error in line 76: 29f22R2lCT A302 5<,4
Error in line 73: eRTSb A206 89,2
Error in line 78: 29f22R2lCT A146 82,3
Error in line 71: iWhbr A206 97,3
Error in line 88: A566 A206 72,2
Error in line 90: cq7lNVK A146 40,1
Error in line 92: \9f\\R\lCT A30\ 139,7
Error in line 82: 29f22R2lCT A302 81,2
Error in line 96: 29f22R2lCT A566 30,6
Error in line 105: cq7lNVK A566 77,3
Error in line 115: 0hFe A566 94,8
Error in line 122: 0hFe A302 52,29
Error in line 132: 29f22R2lCT A566 -5,6
Error in line 128: 29f22R2lCT A566 72,7
Error in line 138: iWhbr A1\6 3\,9
Error in line 145: iWhbr A146 73,3
Error in line 150: eRTSb A146 51,4
Error in line 167: 29f22R2lCT A302 37,7
Error in line 175: fqSiU A146 68,2
Error in line 197: eRTSb A566 24,8
Error in line 190: fqSiU A206 3,8
Error in line 211: iWhbr A566 92,5
Error in line 212: 29f22R2lCT A302 74,2
Error in line 237: cq7lNVK A146 35,6
